syntax = "proto3";

package chainmetric.identity;

option go_package = "github.com/timoth-y/chainmetric-network/orgservices/identity/api/presenter";

message StatusResponse {
  Status status = 1;
}

enum Status {
  UNKNOWN = 0;
  OK = 200;
  ACCEPTED = 202;
  NO_CONTENT = 204;
}
