syntax = "proto3";

package chainmetric.identity.service;
option go_package = "github.com/timoth-y/chainmetric-contracts/src/identity/api/rpc";

import "identity/api/presenter/user.proto";
import "identity/api/presenter/common.proto";
import "google/protobuf/empty.proto";

service UserService {
  rpc register(presenter.RegistrationRequest) returns (presenter.RegistrationResponse);
  rpc getState(google.protobuf.Empty) returns (presenter.User);
  rpc changePassword(presenter.ChangePasswordRequest) returns (presenter.StatusResponse);
}
